pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__home_manager_nixos_empty.snap
---
source: tests/config/make_tests.rs
expression: nixos_snapshot
---
Input:
{
    "nixos": [],
    "home": [{
        "user": "alice@workstation",
        "artifacts": {
            "user-secret": {
                "name": "user-secret",
                "shared": false,
                "files": {
                    "config.json": {
                        "name": "config.json",
                        "path": "~/.config/app/config.json"
                    }
                },
                "prompts": {
                    "token": {
                        "name": "token",
                        "description": "API token"
                    }
                },
                "generator": "/nix/store/gen.sh",
                "serialization": "test"
            }
        },
        "config": {}
    }]
}

nixos_map (empty):
{}
