pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_artifact_with_description.snap
---
source: tests/config/make_tests.rs
assertion_line: 378
expression: "make_snapshot!(input, config)"
---
Input:
{
    "nixos": [{
        "machine": "machine-one",
        "artifacts": {
            "test-secret": {
                "name": "test-secret",
                "description": "Test artifact description",
                "shared": false,
                "files": {},
                "prompts": {},
                "generator": "/nix/store/gen.sh",
                "backend": "test"
            }
        },
        "config": {}
    }],
    "home": []
}

Parsed:
MakeConfiguration {
    nixos_map: {
        "machine-one": {
            "test-secret": ArtifactDef {
                name: "test-secret",
                description: Some(
                    "Test artifact description",
                ),
                shared: false,
                files: {},
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
    },
    home_map: {},
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
