pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_empty_configuration.snap
---
source: tests/config/make_tests.rs
expression: "make_snapshot!(input, config)"
---
Input:
{"nixos": [], "home": []}

Parsed:
MakeConfiguration {
    nixos_map: {},
    home_map: {},
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
