pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_home_manager_configuration.snap
---
source: tests/config/make_tests.rs
assertion_line: 529
expression: "make_snapshot!(input, config)"
---
Input:
{
    "nixos": [],
    "home": [{
        "user": "alice@workstation",
        "artifacts": {
            "user-secret": {
                "name": "user-secret",
                "shared": false,
                "files": {
                    "config.json": {
                        "name": "config.json",
                        "path": "~/.config/app/config.json"
                    }
                },
                "prompts": {
                    "token": {
                        "name": "token",
                        "description": "API token"
                    }
                },
                "generator": "/nix/store/gen.sh",
                "backend": "test"
            }
        },
        "config": {}
    }]
}

Parsed:
MakeConfiguration {
    nixos_map: {},
    home_map: {
        "alice@workstation": {
            "user-secret": ArtifactDef {
                name: "user-secret",
                description: None,
                shared: false,
                files: {
                    "config.json": FileDef {
                        name: "config.json",
                        path: Some(
                            "~/.config/app/config.json",
                        ),
                        owner: None,
                        group: None,
                    },
                },
                prompts: {
                    "token": PromptDef {
                        name: "token",
                        description: Some(
                            "API token",
                        ),
                    },
                },
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
    },
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
