pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_shared_artifact_different_file_names_error.snap
---
source: tests/config/make_tests.rs
assertion_line: 353
expression: "make_snapshot!(input, config)"
---
Input:
{
    "nixos": [
        {
            "machine": "machine-one",
            "artifacts": {
                "shared-secret": {
                    "name": "shared-secret",
                    "shared": true,
                    "files": {
                        "secret-a": {
                            "name": "secret-a",
                            "path": "/run/secrets/secret-a",
                            "owner": "root",
                            "group": "root"
                        }
                    },
                    "prompts": {},
                    "generator": "/nix/store/gen.sh",
                    "backend": "test"
                }
            },
            "config": {}
        },
        {
            "machine": "machine-two",
            "artifacts": {
                "shared-secret": {
                    "name": "shared-secret",
                    "shared": true,
                    "files": {
                        "secret-b": {
                            "name": "secret-b",
                            "path": "/run/secrets/secret-b",
                            "owner": "root",
                            "group": "root"
                        }
                    },
                    "prompts": {},
                    "generator": "/nix/store/gen.sh",
                    "backend": "test"
                }
            },
            "config": {}
        }
    ],
    "home": []
}

Parsed:
MakeConfiguration {
    nixos_map: {
        "machine-one": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: None,
                shared: true,
                files: {
                    "secret-a": FileDef {
                        name: "secret-a",
                        path: Some(
                            "/run/secrets/secret-a",
                        ),
                        owner: Some(
                            "root",
                        ),
                        group: Some(
                            "root",
                        ),
                    },
                },
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
        "machine-two": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: None,
                shared: true,
                files: {
                    "secret-b": FileDef {
                        name: "secret-b",
                        path: Some(
                            "/run/secrets/secret-b",
                        ),
                        owner: Some(
                            "root",
                        ),
                        group: Some(
                            "root",
                        ),
                    },
                },
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
    },
    home_map: {},
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
