pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_shared_artifact_matching_files_no_error.snap
---
source: tests/config/make_tests.rs
assertion_line: 239
expression: "make_snapshot!(input, config)"
---
Input:
{
    "nixos": [
        {
            "machine": "machine-one",
            "artifacts": {
                "shared-secret": {
                    "name": "shared-secret",
                    "shared": true,
                    "files": {
                        "id_ed25519": {
                            "name": "id_ed25519",
                            "path": "/run/secrets/id_ed25519",
                            "owner": "root",
                            "group": "root"
                        }
                    },
                    "prompts": {},
                    "generator": "/nix/store/gen.sh",
                    "backend": "test"
                }
            },
            "config": {}
        },
        {
            "machine": "machine-two",
            "artifacts": {
                "shared-secret": {
                    "name": "shared-secret",
                    "shared": true,
                    "files": {
                        "id_ed25519": {
                            "name": "id_ed25519",
                            "path": "/run/secrets/id_ed25519",
                            "owner": "root",
                            "group": "root"
                        }
                    },
                    "prompts": {},
                    "generator": "/nix/store/gen.sh",
                    "backend": "test"
                }
            },
            "config": {}
        }
    ],
    "home": []
}

Parsed:
MakeConfiguration {
    nixos_map: {
        "machine-one": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: None,
                shared: true,
                files: {
                    "id_ed25519": FileDef {
                        name: "id_ed25519",
                        path: Some(
                            "/run/secrets/id_ed25519",
                        ),
                        owner: Some(
                            "root",
                        ),
                        group: Some(
                            "root",
                        ),
                    },
                },
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
        "machine-two": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: None,
                shared: true,
                files: {
                    "id_ed25519": FileDef {
                        name: "id_ed25519",
                        path: Some(
                            "/run/secrets/id_ed25519",
                        ),
                        owner: Some(
                            "root",
                        ),
                        group: Some(
                            "root",
                        ),
                    },
                },
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
    },
    home_map: {},
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
