pkgs/artifacts/tests/config/snapshots/tests__config__make_tests__snapshot_shared_artifact_mixed_nixos_and_home.snap
---
source: tests/config/make_tests.rs
assertion_line: 185
expression: "make_snapshot!(input, config)"
---
Input:
{
    "nixos": [{
        "machine": "server",
        "artifacts": {
            "shared-secret": {
                "name": "shared-secret",
                "shared": true,
                "files": {},
                "prompts": {},
                "generator": "/nix/store/gen.sh",
                "backend": "test"
            }
        },
        "config": {}
    }],
    "home": [{
        "user": "alice@workstation",
        "artifacts": {
            "shared-secret": {
                "name": "shared-secret",
                "shared": true,
                "files": {},
                "prompts": {},
                "generator": "/nix/store/gen.sh",
                "backend": "test"
            }
        },
        "config": {}
    }]
}

Parsed:
MakeConfiguration {
    nixos_map: {
        "server": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: None,
                shared: true,
                files: {},
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
    },
    home_map: {
        "alice@workstation": {
            "shared-secret": ArtifactDef {
                name: "shared-secret",
                description: None,
                shared: true,
                files: {},
                prompts: {},
                generator: "/nix/store/gen.sh",
                backend: "test",
            },
        },
    },
    nixos_config: {},
    home_config: {},
    make_base: "",
    make_json: "make.json",
}
